--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" data-framework="react">
 	<head>
 		<meta charset="utf-8">
-		<title>React • TodoMVC</title>
+		<title>React • TodoConcept</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<link href="https://fonts.googleapis.com/css?family=Michroma" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<section class="todoapp"></section>
@@ -12,6 +15,7 @@
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Concept Patterns modded by <a href="https://github.com/nmqanh/todo-concept">nmqanh</a></p>
 		</footer>
 
 		<script src="node_modules/todomvc-common/base.js"></script>
